CLIENT-1108: fix visible

--- a/src/modules/wallet/modules/portfolio/less/portfolio.less
+++ b/src/modules/wallet/modules/portfolio/less/portfolio.less
@@ -65,15 +65,12 @@
 
     &__w-tbody {
       max-height: calc(100vh ~'- 208px');
-      transform: translate3d(0, 0, 0);
     }
 
     .smart-table__row {
       min-width: 768px;
-      transform: translate3d(0, 0, 0);
 
       w-visible {
-        transform: translate3d(0, 0, 0);
         min-height: 64px;
       }
 
